test/files/neg/aladdin1055.check
Test_1.scala:2: warning: match may not be exhaustive.
It would fail on the following input: (_ : this.<local child>)
  def foo(t: A.T) = t match {
                    ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
